--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+section{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4rem 0;
+  position: relative;
+}
+
 .active{
     display: none;
 }
@@ -9,4 +17,8 @@
 
 svg {
   transition: transform 0.3s ease, stroke 0.3s ease;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
